Changelog of pam-redhat modules
-------------------------------

This changelog describes only changes after branching of pam-redhat modules
without autoconf support.

0.78-2: Mon Jan 10 2005

* Backported some changes from head (tmraz)
* pam_localuser, pam_succeed_if, pam_xauth are no longer developed here
  - they were accepted to upstream Linux PAM repository
* Applied fixes by Steve Grubb (tmraz)
* pam_console: Changed the console.lock file to console/console.lock
* pam_stack: Overwrite the conversation function too